Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
Replace all 7 usages of the deprecated Class#newInstance() method with
the recommended getDeclaredConstructor().newInstance() pattern. Also
update exception handling to include NoSuchMethodException and
InvocationTargetException where needed.

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>